--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=Apr24FirstApi
 logging.level.org.springframework.web=TRACE
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/product_service
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=my-secret-pw
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+server.port=8081
