--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
 			<version>8.0.33</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+
 
 	</dependencies>
 
