Added support for service discovery

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Apr24FirstApi
+spring.application.name=Apr24FirstApiMorningBatch
 logging.level.org.springframework.web=TRACE
 
 spring.jpa.hibernate.ddl-auto=update
@@ -7,4 +7,8 @@ spring.datasource.username=root
 spring.datasource.password=my-secret-pw
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-server.port=8081
+server.port=${PORT}
+
+eureka.client.registerWithEureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
